// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImportStatusPropertyField Should Render correctly for Completed 1`] = `
<div
  class="MuiBox-root css-132pvtn"
  data-testid="status-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
>
  <svg
    class="MuiSvgIcon-root MuiSvgIcon-colorSuccess MuiSvgIcon-fontSizeMedium css-1x9cg3q-MuiSvgIcon-root"
    data-testid="icon-status-success-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
    />
    <title>
      Completed succesfully
    </title>
  </svg>
  <p
    class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
    data-testid="message-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
  >
    Completed successfully
  </p>
</div>
`;

exports[`ImportStatusPropertyField Should Render correctly for Completed Successfully 1`] = `
<div
  class="MuiBox-root css-132pvtn"
  data-testid="status-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
>
  <svg
    class="MuiSvgIcon-root MuiSvgIcon-colorSuccess MuiSvgIcon-fontSizeMedium css-1x9cg3q-MuiSvgIcon-root"
    data-testid="icon-status-success-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
    />
    <title>
      Completed succesfully
    </title>
  </svg>
  <p
    class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
    data-testid="message-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
  >
    Completed successfully
  </p>
</div>
`;

exports[`ImportStatusPropertyField Should Render correctly for Completed With Critical Errors 1`] = `
<div
  class="MuiBox-root css-132pvtn"
  data-testid="status-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
>
  <svg
    class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeMedium css-13bdyef-MuiSvgIcon-root"
    data-testid="icon-status-failed-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
    />
    <title>
      Completed with error(s)
    </title>
  </svg>
  <p
    class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
    data-testid="message-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
  >
    Completed with
    <span
      class="MuiBox-root css-1vg6q84"
    >
       critical errors
    </span>
    <button
      aria-label="help"
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-1llom6d-MuiButtonBase-root-MuiIconButton-root"
      data-mui-internal-clone-element="true"
      data-testid="help-icon-4b757f12-fb67-4a59-94b1-b8a2498a7a49"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-etbowg-MuiSvgIcon-root"
        data-testid="HelpRoundedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75-.9.92c-.5.51-.86.97-1.04 1.69-.08.32-.13.68-.13 1.14h-2v-.5c0-.46.08-.9.22-1.31.2-.58.53-1.1.95-1.52l1.24-1.26c.46-.44.68-1.1.55-1.8-.13-.72-.69-1.33-1.39-1.53-1.11-.31-2.14.32-2.47 1.27-.12.37-.43.65-.82.65h-.3C8.4 9 8 8.44 8.16 7.88c.43-1.47 1.68-2.59 3.23-2.83 1.52-.24 2.97.55 3.87 1.8 1.18 1.63.83 3.38-.19 4.4z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </p>
</div>
`;

exports[`ImportStatusPropertyField Should Render correctly for Completed With Critical Errors 2`] = `
<div
  class="MuiBox-root css-132pvtn"
  data-testid="status-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
>
  <svg
    class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeMedium css-13bdyef-MuiSvgIcon-root"
    data-testid="icon-status-failed-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
    />
    <title>
      Completed with error(s)
    </title>
  </svg>
  <p
    class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
    data-testid="message-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
  >
    Completed with
    <span
      class="MuiBox-root css-1vg6q84"
    >
       critical errors
    </span>
    <button
      aria-label="help"
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-1llom6d-MuiButtonBase-root-MuiIconButton-root"
      data-mui-internal-clone-element="true"
      data-testid="help-icon-4b757f12-fb67-4a59-94b1-b8a2498a7a49"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-etbowg-MuiSvgIcon-root"
        data-testid="HelpRoundedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75-.9.92c-.5.51-.86.97-1.04 1.69-.08.32-.13.68-.13 1.14h-2v-.5c0-.46.08-.9.22-1.31.2-.58.53-1.1.95-1.52l1.24-1.26c.46-.44.68-1.1.55-1.8-.13-.72-.69-1.33-1.39-1.53-1.11-.31-2.14.32-2.47 1.27-.12.37-.43.65-.82.65h-.3C8.4 9 8 8.44 8.16 7.88c.43-1.47 1.68-2.59 3.23-2.83 1.52-.24 2.97.55 3.87 1.8 1.18 1.63.83 3.38-.19 4.4z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </p>
</div>
`;

exports[`ImportStatusPropertyField Should Render correctly for Completed With Parsing Errors 1`] = `
<div
  class="MuiBox-root css-132pvtn"
  data-testid="status-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
>
  <svg
    class="MuiSvgIcon-root MuiSvgIcon-colorWarning MuiSvgIcon-fontSizeMedium css-h6esa3-MuiSvgIcon-root"
    data-testid="icon-status-failed-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
    />
    <title>
      Completed with parsing errors(s)
    </title>
  </svg>
  <p
    class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
    data-testid="message-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
  >
    Completed with
    <span
      class="MuiBox-root css-1vg6q84"
    >
       parsing errors
    </span>
    <button
      aria-label="help"
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-1llom6d-MuiButtonBase-root-MuiIconButton-root"
      data-mui-internal-clone-element="true"
      data-testid="help-icon-4b757f12-fb67-4a59-94b1-b8a2498a7a49"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-etbowg-MuiSvgIcon-root"
        data-testid="HelpRoundedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75-.9.92c-.5.51-.86.97-1.04 1.69-.08.32-.13.68-.13 1.14h-2v-.5c0-.46.08-.9.22-1.31.2-.58.53-1.1.95-1.52l1.24-1.26c.46-.44.68-1.1.55-1.8-.13-.72-.69-1.33-1.39-1.53-1.11-.31-2.14.32-2.47 1.27-.12.37-.43.65-.82.65h-.3C8.4 9 8 8.44 8.16 7.88c.43-1.47 1.68-2.59 3.23-2.83 1.52-.24 2.97.55 3.87 1.8 1.18 1.63.83 3.38-.19 4.4z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </p>
</div>
`;

exports[`ImportStatusPropertyField Should Render correctly for Completed With Parsing Errors 2`] = `
<div
  class="MuiBox-root css-132pvtn"
  data-testid="status-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
>
  <svg
    class="MuiSvgIcon-root MuiSvgIcon-colorWarning MuiSvgIcon-fontSizeMedium css-h6esa3-MuiSvgIcon-root"
    data-testid="icon-status-failed-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
    />
    <title>
      Completed with parsing errors(s)
    </title>
  </svg>
  <p
    class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
    data-testid="message-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
  >
    Completed with
    <span
      class="MuiBox-root css-1vg6q84"
    >
       parsing errors
    </span>
    <button
      aria-label="help"
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-1llom6d-MuiButtonBase-root-MuiIconButton-root"
      data-mui-internal-clone-element="true"
      data-testid="help-icon-4b757f12-fb67-4a59-94b1-b8a2498a7a49"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-etbowg-MuiSvgIcon-root"
        data-testid="HelpRoundedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75-.9.92c-.5.51-.86.97-1.04 1.69-.08.32-.13.68-.13 1.14h-2v-.5c0-.46.08-.9.22-1.31.2-.58.53-1.1.95-1.52l1.24-1.26c.46-.44.68-1.1.55-1.8-.13-.72-.69-1.33-1.39-1.53-1.11-.31-2.14.32-2.47 1.27-.12.37-.43.65-.82.65h-.3C8.4 9 8 8.44 8.16 7.88c.43-1.47 1.68-2.59 3.23-2.83 1.52-.24 2.97.55 3.87 1.8 1.18 1.63.83 3.38-.19 4.4z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </p>
</div>
`;

exports[`ImportStatusPropertyField Should Render correctly for Completed With Parsing Errors and Parsing Warnings 1`] = `
<div
  class="MuiBox-root css-132pvtn"
  data-testid="status-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
>
  <svg
    class="MuiSvgIcon-root MuiSvgIcon-colorWarning MuiSvgIcon-fontSizeMedium css-h6esa3-MuiSvgIcon-root"
    data-testid="icon-status-failed-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
    />
    <title>
      Completed with parsing errors(s)
    </title>
  </svg>
  <p
    class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
    data-testid="message-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
  >
    <span
      class="MuiBox-root css-0"
    >
      Completed with 
    </span>
    <span
      class="MuiBox-root css-1vg6q84"
    >
      parsing errors
    </span>
    <button
      aria-label="help"
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-1llom6d-MuiButtonBase-root-MuiIconButton-root"
      data-mui-internal-clone-element="true"
      data-testid="help-icon-4b757f12-fb67-4a59-94b1-b8a2498a7a49"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-etbowg-MuiSvgIcon-root"
        data-testid="HelpRoundedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75-.9.92c-.5.51-.86.97-1.04 1.69-.08.32-.13.68-.13 1.14h-2v-.5c0-.46.08-.9.22-1.31.2-.58.53-1.1.95-1.52l1.24-1.26c.46-.44.68-1.1.55-1.8-.13-.72-.69-1.33-1.39-1.53-1.11-.31-2.14.32-2.47 1.27-.12.37-.43.65-.82.65h-.3C8.4 9 8 8.44 8.16 7.88c.43-1.47 1.68-2.59 3.23-2.83 1.52-.24 2.97.55 3.87 1.8 1.18 1.63.83 3.38-.19 4.4z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    and
    <span
      class="MuiBox-root css-1vg6q84"
    >
       parsing warnings
    </span>
    <button
      aria-label="help"
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-1llom6d-MuiButtonBase-root-MuiIconButton-root"
      data-mui-internal-clone-element="true"
      data-testid="help-icon-4b757f12-fb67-4a59-94b1-b8a2498a7a49"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-etbowg-MuiSvgIcon-root"
        data-testid="HelpRoundedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75-.9.92c-.5.51-.86.97-1.04 1.69-.08.32-.13.68-.13 1.14h-2v-.5c0-.46.08-.9.22-1.31.2-.58.53-1.1.95-1.52l1.24-1.26c.46-.44.68-1.1.55-1.8-.13-.72-.69-1.33-1.39-1.53-1.11-.31-2.14.32-2.47 1.27-.12.37-.43.65-.82.65h-.3C8.4 9 8 8.44 8.16 7.88c.43-1.47 1.68-2.59 3.23-2.83 1.52-.24 2.97.55 3.87 1.8 1.18 1.63.83 3.38-.19 4.4z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </p>
</div>
`;

exports[`ImportStatusPropertyField Should Render correctly for Completed With Parsing Errors and Parsing Warnings 2`] = `
<div
  class="MuiBox-root css-132pvtn"
  data-testid="status-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
>
  <svg
    class="MuiSvgIcon-root MuiSvgIcon-colorWarning MuiSvgIcon-fontSizeMedium css-h6esa3-MuiSvgIcon-root"
    data-testid="icon-status-failed-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
    />
    <title>
      Completed with parsing errors(s)
    </title>
  </svg>
  <p
    class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
    data-testid="message-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
  >
    <span
      class="MuiBox-root css-0"
    >
      Completed with 
    </span>
    <span
      class="MuiBox-root css-1vg6q84"
    >
      parsing errors
    </span>
    <button
      aria-label="help"
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-1llom6d-MuiButtonBase-root-MuiIconButton-root"
      data-mui-internal-clone-element="true"
      data-testid="help-icon-4b757f12-fb67-4a59-94b1-b8a2498a7a49"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-etbowg-MuiSvgIcon-root"
        data-testid="HelpRoundedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75-.9.92c-.5.51-.86.97-1.04 1.69-.08.32-.13.68-.13 1.14h-2v-.5c0-.46.08-.9.22-1.31.2-.58.53-1.1.95-1.52l1.24-1.26c.46-.44.68-1.1.55-1.8-.13-.72-.69-1.33-1.39-1.53-1.11-.31-2.14.32-2.47 1.27-.12.37-.43.65-.82.65h-.3C8.4 9 8 8.44 8.16 7.88c.43-1.47 1.68-2.59 3.23-2.83 1.52-.24 2.97.55 3.87 1.8 1.18 1.63.83 3.38-.19 4.4z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    and
    <span
      class="MuiBox-root css-1vg6q84"
    >
       parsing warnings
    </span>
    <button
      aria-label="help"
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-1llom6d-MuiButtonBase-root-MuiIconButton-root"
      data-mui-internal-clone-element="true"
      data-testid="help-icon-4b757f12-fb67-4a59-94b1-b8a2498a7a49"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-etbowg-MuiSvgIcon-root"
        data-testid="HelpRoundedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75-.9.92c-.5.51-.86.97-1.04 1.69-.08.32-.13.68-.13 1.14h-2v-.5c0-.46.08-.9.22-1.31.2-.58.53-1.1.95-1.52l1.24-1.26c.46-.44.68-1.1.55-1.8-.13-.72-.69-1.33-1.39-1.53-1.11-.31-2.14.32-2.47 1.27-.12.37-.43.65-.82.65h-.3C8.4 9 8 8.44 8.16 7.88c.43-1.47 1.68-2.59 3.23-2.83 1.52-.24 2.97.55 3.87 1.8 1.18 1.63.83 3.38-.19 4.4z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </p>
</div>
`;

exports[`ImportStatusPropertyField Should Render correctly for Completed With Parsing Warnings 1`] = `
<div
  class="MuiBox-root css-132pvtn"
  data-testid="status-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
>
  <svg
    class="MuiSvgIcon-root MuiSvgIcon-colorWarning MuiSvgIcon-fontSizeMedium css-h6esa3-MuiSvgIcon-root"
    data-testid="icon-status-failed-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
    />
    <title>
      Completed with parsing warning(s)
    </title>
  </svg>
  <p
    class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
    data-testid="message-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
  >
    Completed with
    <span
      class="MuiBox-root css-1vg6q84"
    >
       parsing warnings
    </span>
    <button
      aria-label="help"
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-1llom6d-MuiButtonBase-root-MuiIconButton-root"
      data-mui-internal-clone-element="true"
      data-testid="help-icon-4b757f12-fb67-4a59-94b1-b8a2498a7a49"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-etbowg-MuiSvgIcon-root"
        data-testid="HelpRoundedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75-.9.92c-.5.51-.86.97-1.04 1.69-.08.32-.13.68-.13 1.14h-2v-.5c0-.46.08-.9.22-1.31.2-.58.53-1.1.95-1.52l1.24-1.26c.46-.44.68-1.1.55-1.8-.13-.72-.69-1.33-1.39-1.53-1.11-.31-2.14.32-2.47 1.27-.12.37-.43.65-.82.65h-.3C8.4 9 8 8.44 8.16 7.88c.43-1.47 1.68-2.59 3.23-2.83 1.52-.24 2.97.55 3.87 1.8 1.18 1.63.83 3.38-.19 4.4z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </p>
</div>
`;

exports[`ImportStatusPropertyField Should Render correctly for Completed With Parsing Warnings 2`] = `
<div
  class="MuiBox-root css-132pvtn"
  data-testid="status-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
>
  <svg
    class="MuiSvgIcon-root MuiSvgIcon-colorWarning MuiSvgIcon-fontSizeMedium css-h6esa3-MuiSvgIcon-root"
    data-testid="icon-status-failed-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
    />
    <title>
      Completed with parsing warning(s)
    </title>
  </svg>
  <p
    class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
    data-testid="message-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
  >
    Completed with
    <span
      class="MuiBox-root css-1vg6q84"
    >
       parsing warnings
    </span>
    <button
      aria-label="help"
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-1llom6d-MuiButtonBase-root-MuiIconButton-root"
      data-mui-internal-clone-element="true"
      data-testid="help-icon-4b757f12-fb67-4a59-94b1-b8a2498a7a49"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-etbowg-MuiSvgIcon-root"
        data-testid="HelpRoundedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75-.9.92c-.5.51-.86.97-1.04 1.69-.08.32-.13.68-.13 1.14h-2v-.5c0-.46.08-.9.22-1.31.2-.58.53-1.1.95-1.52l1.24-1.26c.46-.44.68-1.1.55-1.8-.13-.72-.69-1.33-1.39-1.53-1.11-.31-2.14.32-2.47 1.27-.12.37-.43.65-.82.65h-.3C8.4 9 8 8.44 8.16 7.88c.43-1.47 1.68-2.59 3.23-2.83 1.52-.24 2.97.55 3.87 1.8 1.18 1.63.83 3.38-.19 4.4z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </p>
</div>
`;

exports[`ImportStatusPropertyField Should Render correctly for Completed with Critical Errors 1`] = `
<div
  class="MuiBox-root css-132pvtn"
  data-testid="status-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
>
  <svg
    class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeMedium css-13bdyef-MuiSvgIcon-root"
    data-testid="icon-status-failed-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
    />
    <title>
      Completed with error(s)
    </title>
  </svg>
  <p
    class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
    data-testid="message-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
  >
    Completed with
    <span
      class="MuiBox-root css-1vg6q84"
    >
       critical errors
    </span>
    <button
      aria-label="help"
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-1llom6d-MuiButtonBase-root-MuiIconButton-root"
      data-mui-internal-clone-element="true"
      data-testid="help-icon-4b757f12-fb67-4a59-94b1-b8a2498a7a49"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-etbowg-MuiSvgIcon-root"
        data-testid="HelpRoundedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75-.9.92c-.5.51-.86.97-1.04 1.69-.08.32-.13.68-.13 1.14h-2v-.5c0-.46.08-.9.22-1.31.2-.58.53-1.1.95-1.52l1.24-1.26c.46-.44.68-1.1.55-1.8-.13-.72-.69-1.33-1.39-1.53-1.11-.31-2.14.32-2.47 1.27-.12.37-.43.65-.82.65h-.3C8.4 9 8 8.44 8.16 7.88c.43-1.47 1.68-2.59 3.23-2.83 1.52-.24 2.97.55 3.87 1.8 1.18 1.63.83 3.38-.19 4.4z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </p>
</div>
`;

exports[`ImportStatusPropertyField Should Render correctly for Completed with Parsing Errors 1`] = `
<div
  class="MuiBox-root css-132pvtn"
  data-testid="status-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
>
  <svg
    class="MuiSvgIcon-root MuiSvgIcon-colorWarning MuiSvgIcon-fontSizeMedium css-h6esa3-MuiSvgIcon-root"
    data-testid="icon-status-failed-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
    />
    <title>
      Completed with parsing errors(s)
    </title>
  </svg>
  <p
    class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
    data-testid="message-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
  >
    Completed with
    <span
      class="MuiBox-root css-1vg6q84"
    >
       parsing errors
    </span>
    <button
      aria-label="help"
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-1llom6d-MuiButtonBase-root-MuiIconButton-root"
      data-mui-internal-clone-element="true"
      data-testid="help-icon-4b757f12-fb67-4a59-94b1-b8a2498a7a49"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-etbowg-MuiSvgIcon-root"
        data-testid="HelpRoundedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75-.9.92c-.5.51-.86.97-1.04 1.69-.08.32-.13.68-.13 1.14h-2v-.5c0-.46.08-.9.22-1.31.2-.58.53-1.1.95-1.52l1.24-1.26c.46-.44.68-1.1.55-1.8-.13-.72-.69-1.33-1.39-1.53-1.11-.31-2.14.32-2.47 1.27-.12.37-.43.65-.82.65h-.3C8.4 9 8 8.44 8.16 7.88c.43-1.47 1.68-2.59 3.23-2.83 1.52-.24 2.97.55 3.87 1.8 1.18 1.63.83 3.38-.19 4.4z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </p>
</div>
`;

exports[`ImportStatusPropertyField Should Render correctly for Completed with Parsing Errors and Parsing Warnings 1`] = `
<div
  class="MuiBox-root css-132pvtn"
  data-testid="status-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
>
  <svg
    class="MuiSvgIcon-root MuiSvgIcon-colorWarning MuiSvgIcon-fontSizeMedium css-h6esa3-MuiSvgIcon-root"
    data-testid="icon-status-failed-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
    />
    <title>
      Completed with parsing errors(s)
    </title>
  </svg>
  <p
    class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
    data-testid="message-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
  >
    <span
      class="MuiBox-root css-0"
    >
      Completed with 
    </span>
    <span
      class="MuiBox-root css-1vg6q84"
    >
      parsing errors
    </span>
    <button
      aria-label="help"
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-1llom6d-MuiButtonBase-root-MuiIconButton-root"
      data-mui-internal-clone-element="true"
      data-testid="help-icon-4b757f12-fb67-4a59-94b1-b8a2498a7a49"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-etbowg-MuiSvgIcon-root"
        data-testid="HelpRoundedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75-.9.92c-.5.51-.86.97-1.04 1.69-.08.32-.13.68-.13 1.14h-2v-.5c0-.46.08-.9.22-1.31.2-.58.53-1.1.95-1.52l1.24-1.26c.46-.44.68-1.1.55-1.8-.13-.72-.69-1.33-1.39-1.53-1.11-.31-2.14.32-2.47 1.27-.12.37-.43.65-.82.65h-.3C8.4 9 8 8.44 8.16 7.88c.43-1.47 1.68-2.59 3.23-2.83 1.52-.24 2.97.55 3.87 1.8 1.18 1.63.83 3.38-.19 4.4z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    and
    <span
      class="MuiBox-root css-1vg6q84"
    >
       parsing warnings
    </span>
    <button
      aria-label="help"
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-1llom6d-MuiButtonBase-root-MuiIconButton-root"
      data-mui-internal-clone-element="true"
      data-testid="help-icon-4b757f12-fb67-4a59-94b1-b8a2498a7a49"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-etbowg-MuiSvgIcon-root"
        data-testid="HelpRoundedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75-.9.92c-.5.51-.86.97-1.04 1.69-.08.32-.13.68-.13 1.14h-2v-.5c0-.46.08-.9.22-1.31.2-.58.53-1.1.95-1.52l1.24-1.26c.46-.44.68-1.1.55-1.8-.13-.72-.69-1.33-1.39-1.53-1.11-.31-2.14.32-2.47 1.27-.12.37-.43.65-.82.65h-.3C8.4 9 8 8.44 8.16 7.88c.43-1.47 1.68-2.59 3.23-2.83 1.52-.24 2.97.55 3.87 1.8 1.18 1.63.83 3.38-.19 4.4z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </p>
</div>
`;

exports[`ImportStatusPropertyField Should Render correctly for Completed with Parsing Warnings 1`] = `
<div
  class="MuiBox-root css-132pvtn"
  data-testid="status-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
>
  <svg
    class="MuiSvgIcon-root MuiSvgIcon-colorWarning MuiSvgIcon-fontSizeMedium css-h6esa3-MuiSvgIcon-root"
    data-testid="icon-status-failed-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
    />
    <title>
      Completed with parsing warning(s)
    </title>
  </svg>
  <p
    class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
    data-testid="message-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
  >
    Completed with
    <span
      class="MuiBox-root css-1vg6q84"
    >
       parsing warnings
    </span>
    <button
      aria-label="help"
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-1llom6d-MuiButtonBase-root-MuiIconButton-root"
      data-mui-internal-clone-element="true"
      data-testid="help-icon-4b757f12-fb67-4a59-94b1-b8a2498a7a49"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-etbowg-MuiSvgIcon-root"
        data-testid="HelpRoundedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75-.9.92c-.5.51-.86.97-1.04 1.69-.08.32-.13.68-.13 1.14h-2v-.5c0-.46.08-.9.22-1.31.2-.58.53-1.1.95-1.52l1.24-1.26c.46-.44.68-1.1.55-1.8-.13-.72-.69-1.33-1.39-1.53-1.11-.31-2.14.32-2.47 1.27-.12.37-.43.65-.82.65h-.3C8.4 9 8 8.44 8.16 7.88c.43-1.47 1.68-2.59 3.23-2.83 1.52-.24 2.97.55 3.87 1.8 1.18 1.63.83 3.38-.19 4.4z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </p>
</div>
`;

exports[`ImportStatusPropertyField Should Render correctly for Pending 1`] = `
<div
  class="MuiBox-root css-132pvtn"
  data-testid="status-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
>
  <svg
    class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeMedium css-14fk8m9-MuiSvgIcon-root"
    data-testid="icon-status-pending-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm4.2 14.2L11 13V7h1.5v5.2l4.5 2.7-.8 1.3z"
    />
    <title>
      Pending
    </title>
  </svg>
  <p
    class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
    data-testid="message-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
  >
    Pending
  </p>
</div>
`;

exports[`ImportStatusPropertyField Should Render correctly for Pending State 1`] = `
<div
  class="MuiBox-root css-132pvtn"
  data-testid="status-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
>
  <svg
    class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeMedium css-14fk8m9-MuiSvgIcon-root"
    data-testid="icon-status-pending-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm4.2 14.2L11 13V7h1.5v5.2l4.5 2.7-.8 1.3z"
    />
    <title>
      Pending
    </title>
  </svg>
  <p
    class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
    data-testid="message-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
  >
    Pending
  </p>
</div>
`;

exports[`ImportStatusPropertyField Should Render correctly for Running 1`] = `
<div
  class="MuiBox-root css-132pvtn"
  data-testid="status-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
>
  <svg
    class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeMedium css-1wn4sen-MuiSvgIcon-root"
    data-testid="icon-status-running-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2z"
    />
    <title>
      Running
    </title>
  </svg>
  <p
    class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
    data-testid="message-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
  >
    Running
  </p>
</div>
`;

exports[`ImportStatusPropertyField Should Render correctly for Running State 1`] = `
<div
  class="MuiBox-root css-132pvtn"
  data-testid="status-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
>
  <svg
    class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeMedium css-1wn4sen-MuiSvgIcon-root"
    data-testid="icon-status-running-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2z"
    />
    <title>
      Running
    </title>
  </svg>
  <p
    class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
    data-testid="message-56ea04a0-f80e-4cd0-b967-eb55d108f1b6"
  >
    Running
  </p>
</div>
`;
